# luanaut

./: .clang-tidy  CMakeLists.txt  README.md  e  vcpkg.json
cmake/: add_test_executable.cmake  set_target_defaults.cmake
src/: CMakeLists.txt
src/luanaut/: CMakeLists.txt  Main.cc  Vertex.h  VmaAllocatorHandle.h  VulkanStuff.cc  VulkanStuff.h
src/luanaut/shaders/: UniformBufferObject.h  Vertex.h  shader.slang
tests/: CMakeLists.txt
